--- a/progress.html
+++ b/progress.html
@@ -7,6 +7,7 @@
     
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>马连博的主页</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
