--- a/progress.html
+++ b/progress.html
@@ -20,7 +20,7 @@
          
     	<script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
-        <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
         <script type="text/javascript" src="js/mine.js"></script>  
            
