--- a/progress.html
+++ b/progress.html
@@ -7,7 +7,6 @@
     
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>马连博的主页</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -20,6 +19,7 @@
          
     	<script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
+<!--        <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>-->
         <script src="js/http_tjs.sjs.sinajs.cn_open_api_js_wb.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
         <script type="text/javascript" src="js/mine.js"></script>  
