--- a/CCFTOPPeriodical.html
+++ b/CCFTOPPeriodical.html
@@ -30,7 +30,8 @@
 	
 		body{
 			/*background-image:url(images/bg1.jpg);*/
-			background-color:#7BBDFF;
+            /*background-color:#7BBDFF;*/
+            background-color: #eee;
 		}
 		
         .underline{
@@ -79,7 +80,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>  
+        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>
         <li style="margin-left:15px"><a id="projectInfo" href="" target="_self">科研项目</a></li>   
         <li style="margin-left:15px"><a id="team" href="" target="_self">科研团队</a></li>  
         <li style="margin-left:15px"><a id="progress" href="" target="_self">研究进展</a></li>
@@ -161,7 +162,7 @@
 
 	<script  type="text/javascript">
 	document.getElementById("index").href="index.html?v="+Math.random();
- 　　document.getElementById("research").href="research.html?v="+Math.random();
+ 　　document.getElementById("research").href="research_index.html?v="+Math.random();
 	document.getElementById("projectInfo").href="projectInfo.html?v="+Math.random();
 	document.getElementById("team").href="team.html?v="+Math.random();
 	document.getElementById("progress").href="progress.html?v="+Math.random();
