--- a/enrollment.html
+++ b/enrollment.html
@@ -26,7 +26,8 @@
 	
 		body{
 			/*background-image:url(images/bg1.jpg);*/
-			background-color:#7BBDFF;
+            /*background-color:#7BBDFF;*/
+            background-color: #eee;
 		}
 		
         .underline{
@@ -75,7 +76,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>  
+        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>
         <li style="margin-left:15px"><a id="projectInfo" href="" target="_self">科研项目</a></li>   
         <li style="margin-left:15px"><a id="team" href="" target="_self">科研团队</a></li>  
         <li style="margin-left:15px"><a id="progress" href="" target="_self">研究进展</a></li>
@@ -112,7 +113,8 @@
    <div class="row_1" style="padding-top:20px;">
     
       <div class="panel panel-info">
-        	<div><h2 class="head">招生信息</h2></div>
+        	<div><h2 class="head_2">招生信息</h2></div>
+          <div><h2 class="head"></h2></div>
             <div class="panel-body">
               <p><strong>招生说明：                </strong></p>
               <p>1：秉着“宁缺毋滥”的原则，欢迎积极进取、富有理想的优秀学生加入我们；</p>
@@ -145,7 +147,7 @@
 
 <script  type="text/javascript">
 	document.getElementById("index").href="index.html?v="+Math.random();
- 　　document.getElementById("research").href="research.html?v="+Math.random();
+ 　　document.getElementById("research").href="research_index.html?v="+Math.random();
 	document.getElementById("projectInfo").href="projectInfo.html?v="+Math.random();
 	document.getElementById("team").href="team.html?v="+Math.random();
 	document.getElementById("progress").href="progress.html?v="+Math.random();
