--- a/projectInfo.html
+++ b/projectInfo.html
@@ -72,7 +72,8 @@
 
 			/*background-image:url(images/bg1.jpg);*/
 
-			background-color:#7BBDFF;
+            /*background-color:#7BBDFF;*/
+            background-color: #eee;
 
 		}
 
@@ -169,7 +170,7 @@
     <div class="collapse navbar-collapse" id="main-navbar">
 
           <ul class="nav navbar-nav navbar-right">
-        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>  
+        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>
         <li style="margin-left:15px;background-color: #000000"><a id="projectInfo" href="" target="_self">科研项目</a></li>   
         <li style="margin-left:15px"><a id="team" href="" target="_self">科研团队</a></li>  
         <li style="margin-left:15px"><a id="progress" href="" target="_self">研究进展</a></li>
@@ -220,8 +221,8 @@
 
     
 
-      <div><h2 class="head" >科研项目</h2></div>
-
+      <div><h2 class="head_2" >科研项目</h2></div>
+       <div><h2 class="head"></h2></div>
             <div class="panel-body">
 
               <div> </div>
@@ -384,6 +385,60 @@
 
               </div>
 
+                <div class="list-group-item">
+
+                    <ul>
+
+                        <li>省自然科学基金联合基金计划项目，数据驱动的工业云资源分配与调度优化决策理论与方法，2021--2022，第一负责人</li>
+
+                    </ul>
+
+                </div>
+                <div class="list-group-item">
+
+                    <ul>
+
+                        <li>中央基本科研业务费-重点科学研究引导项目，数据驱动的工业云资源分配与调度理论与方法，30万，2021--2023，第一负责人</li>
+
+                    </ul>
+
+                </div>
+                <div class="list-group-item">
+
+                    <ul>
+
+                        <li>华为创新计划专项课题，数据中心相关的仿生计算技术分析研究，2019--2021，第一负责人</li>
+
+                    </ul>
+
+                </div>
+                <div class="list-group-item">
+
+                    <ul>
+
+                        <li>东北大学双一流建设专项子课题，基于工业智能管理的网络化群体智能计算模式与方法，2018--2019，第一负责人</li>
+
+                    </ul>
+
+                </div>
+                <div class="list-group-item">
+
+                    <ul>
+
+                        <li>东北大学双一流建设标志性成果项目，2018--2019，第一负责人</li>
+
+                    </ul>
+
+                </div>
+                <div class="list-group-item">
+
+                    <ul>
+
+                        <li>东北大学软件学院青苹果计划--优秀骨干教师人才项目，2016--2021，第一负责人</li>
+
+                    </ul>
+
+                </div>
              
 
             </div>
@@ -394,7 +449,7 @@
 
 	<script  type="text/javascript">
 	document.getElementById("index").href="index.html?v="+Math.random();
- 　　document.getElementById("research").href="research.html?v="+Math.random();
+ 　　document.getElementById("research").href="research_index.html?v="+Math.random();
 	document.getElementById("projectInfo").href="projectInfo.html?v="+Math.random();
 	document.getElementById("team").href="team.html?v="+Math.random();
 	document.getElementById("progress").href="progress.html?v="+Math.random();
