--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 	
 		body{
 			/*background-image:url(images/bg1.jpg);*/
-			background-color:#7BBDFF;
+			/*background-color:#7BBDFF;*/
+            background-color: #eee;
 		}
 		
         .underline{
@@ -79,7 +80,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li style="margin-left:15px"><a href="research.html" target="_self">科研论文</a></li>  
+        <li style="margin-left:15px"><a href="research_index.html" target="_self">科研论文</a></li>
         <li style="margin-left:15px"><a href="projectInfo.html" target="_self">科研项目</a></li>   
         <li style="margin-left:15px"><a href="team.html" target="_self">科研团队</a></li>  
         <li style="margin-left:15px"><a href="progress.html" target="_self">研究进展</a></li>
@@ -116,17 +117,55 @@
 <div class="container" id="exceptHead" style="margin-top:100px;box-shadow:0px 0px 20px #333333">
 
 <div class="row">
-  <div class="col-md-2" style="margin:15px 0px 0px 20px"> <img src="images/Profile1.jpg" alt="Image About Me" width="100%" height="100%" class="img-responsive img-rounded center-block"/> </div>
+  <div class="col-md-2" style="margin:15px 0px 0px 20px"> <br/><img src="images/Profile1.jpg" alt="Image About Me" width="100%" height="100%" class="img-responsive img-rounded center-block"/> </div>
   <div class="col-md-9">
   <div>
     <h2><strong>&nbsp;&nbsp;&nbsp;马连博，教授，辽宁省百千万人才，东北大学引进人才</strong></h2>   </div>  <br/>
-  <div class="col-md-7">
+  <div class="col-md-7" style="float: left;width: 49%">
   <ul >
-                                        <li class="list-group-item"><strong>出生年月：1981.10</strong>                                                   </li>
-                                        <li class="list-group-item"><strong>邮  箱：malb@swc.neu.edu.cn</strong>                                        </li>
-                                        <li class="list-group-item"><strong>电  话：+86-024-83681822</strong>                                           </li>
+                                        <li class="list-group-item"><strong>出生年月：1981.10</strong>                                                   </li><br/>
+                                        <li class="list-group-item"><strong>邮  箱：malb@swc.neu.edu.cn</strong>                                        </li><br/>
+                                        <li class="list-group-item"><strong>电  话：+86-024-83681822</strong>                                           </li><br/>
                                         <li class="list-group-item"><strong>地  址：辽宁省沈阳市浑南区创新路195号东北大学浑南校区信息楼, 110169</strong>         </li>
         </ul></div>
+      <div style="float: right;width: 49%">
+              <p><strong>[1]
+                  &nbsp;&nbsp;2011.3-2015.1
+              </strong></p>
+              <p><strong>
+                  中国科学院大学
+                  &nbsp;|&nbsp;
+                  工学
+                  &nbsp;|&nbsp;
+                  博士
+                  &nbsp;|&nbsp;
+                  博士研究生毕业
+              </strong></p>
+              <p><strong>[2]
+                  &nbsp;&nbsp;2004.9-2007.3
+              </strong></p>
+              <p><strong>
+                  东北大学
+                  &nbsp;|&nbsp;
+                  通信与信息系统
+                  &nbsp;|&nbsp;
+                  硕士
+                  &nbsp;|&nbsp;
+                  硕士研究生
+              </strong></p>
+              <p><strong>[3]
+                  &nbsp;&nbsp;2000.9-2004.7
+              </strong></p>
+              <p><strong>
+                  东北大学
+                  &nbsp;|&nbsp;
+                  信息与通信工程
+                  &nbsp;|&nbsp;
+                  学士学位
+                  &nbsp;|&nbsp;
+                  大学本科毕业
+              </strong></p>
+      </div>
   <div class="col-md-3" style="float:right"><!--右边不知道放啥-->
 <!--  <span style="float:right;"><img src="./images/weChat.jpg" width="99%" height="99%" alt="扫码加微信"></span>-->
 
