--- a/progress.html
+++ b/progress.html
@@ -19,7 +19,7 @@
          
     	<script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
-<!--        <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>-->
+       <!-- <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script> -->
         <script src="js/http_tjs.sjs.sinajs.cn_open_api_js_wb.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
         <script type="text/javascript" src="js/mine.js"></script>  
@@ -28,7 +28,8 @@
 	
 		body{
 			/*background-image:url(images/bg1.jpg);*/
-			background-color:#7BBDFF;
+            /*background-color:#7BBDFF;*/
+            background-color: #eee;
 		}
 		
         .underline{
@@ -78,7 +79,7 @@
     <div class="collapse navbar-collapse" id="main-navbar">
 		
       <ul class="nav navbar-nav navbar-right">
-        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>  
+        <li style="margin-left:15px"><a id="research" href="" target="_self">科研论文</a></li>
         <li style="margin-left:15px"><a id="projectInfo" href="" target="_self">科研项目</a></li>   
         <li style="margin-left:15px"><a id="team" href="" target="_self">科研团队</a></li>  
         <li style="margin-left:15px;background-color: #000000"><a id="progress" href="" target="_self">研究进展</a></li>
@@ -184,7 +185,7 @@
 	
 	<script  type="text/javascript">
 	document.getElementById("index").href="index.html?v="+Math.random();
- 　　document.getElementById("research").href="research.html?v="+Math.random();
+  document.getElementById("research").href="research_index.html?v="+Math.random();
 	document.getElementById("projectInfo").href="projectInfo.html?v="+Math.random();
 	document.getElementById("team").href="team.html?v="+Math.random();
 	document.getElementById("progress").href="progress.html?v="+Math.random();
