--- a/research_index.html
+++ b/research_index.html
@@ -131,7 +131,7 @@
                     <p style="padding:3px 0;line-height: 30px"><strong>以下是论文的具体发表情况:</strong></p>
                         <ul>
                             <li>
-                                <a href="/papers/1.html">Lianbo Ma, Haidong Kang, Guo Yu, Qing Li, Qiang He, Single-Domain Generalized Predictor for Neural Architecture Search System, IEEE Transactions on Computers, 2023, major revision. (CCF A类).</a>
+                                <a href="/papers/1.html" target="_self">Lianbo Ma, Haidong Kang, Guo Yu, Qing Li, Qiang He, Single-Domain Generalized Predictor for Neural Architecture Search System, IEEE Transactions on Computers, 2023, major revision. (CCF A类).</a>
 
                             </li>
                             <li>
