--- a/papers/11.html
+++ b/papers/11.html
@@ -223,7 +223,7 @@
             <p><strong>点击次数：</strong><span>12</span></p>
 
             <div style="margin-top: 40px;border-top: #ccc 1px dashed;">
-                <a href="../../Desktop/research_index.html"><p>返回</p></a>
+                <a href="../research_index.html"><p>返回</p></a>
             </div>
 
         </div>
