--- a/papers/11.html
+++ b/papers/11.html
@@ -34,25 +34,25 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="../Desktop/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="../Desktop/css/team.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/team.css"/>
 
-    <link rel="stylesheet" type="text/css" href="../Desktop/css/adds.css">
+    <link rel="stylesheet" type="text/css" href="../css/adds.css">
 
-    <link rel="shortcut icon" type="text/css" href="../Desktop/images/myIco.ico" />
+    <link rel="shortcut icon" type="text/css" href="../images/myIco.ico" />
 
 
 
-    <script src="../Desktop/js/jquery-1.11.2.min.js"></script>
+    <script src="../js/jquery-1.11.2.min.js"></script>
 
-    <script src="../Desktop/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 
-    <script type="text/javascript" src="../Desktop/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.dataTables.min.js"></script>
 
-    <script type="text/javascript" src="../Desktop/js/mine.js"></script>
+    <script type="text/javascript" src="../js/mine.js"></script>
 
 
 
@@ -136,7 +136,7 @@
 
 <nav id="myNav1" class="navbar navbar-inverse navbar-fixed-top">
 
-    <div style="height:86px;width:100%;text-align:center;background-color:#002446" ><img  src="../Desktop/images/logo.png"></div>
+    <div style="height:86px;width:100%;text-align:center;background-color:#002446" ><img  src="../images/logo.png"></div>
 
     <div style="border-top:1px solid #FFF" class="container">
 
