--- a/team.html
+++ b/team.html
@@ -256,17 +256,20 @@
 
             <div class="panel-body">
 
-         <ul class="list-group">
+         <ul class="list-group"> 
 
-          <li class="list-group-item" ><strong>史玉回</strong>，教授，博导，IEEE Fellow, 南方科技大学</li>
+          <li class="list-group-item" ><strong>金耀初</strong>，教授，博导，英国萨里大学 （访学合作导师）</li>
 
-          <li class="list-group-item" ><strong>Zhiwei Lin</strong>，博导，Ulster University/奥斯特大学</li>
+	 <li class="list-group-item" ><strong>史玉回</strong>，教授，博导，IEEE Fellow, 南方科技大学</li>
 
-         <li class="list-group-item"><strong>程适</strong>，联合博导，Tun Hussein Onn University，陕西师范大学</li>
+         <li class="list-group-item"><strong>杨圣祥</strong>，教授，博导，长江学者，英国 De Montfort University</li>
 
-          <li class="list-group-item"><strong>何小贤</strong>，联合硕导，中南大学</li>
+          <li class="list-group-item"><strong>喻果</strong>，研究员，华东理工大学/英国萨里大学博士</li>
 
             </ul>
+
+
+         
 
             </div><!--panel-body-->
 
