--- a/enrollment.html
+++ b/enrollment.html
@@ -133,11 +133,15 @@
                 （3）计算智能与自然学习，教育部高校基本科研业务费专项--国家优秀青年培育项目，主持。</p>
               <p> <strong>招生人数</strong>：每年1人 </p>
               <p>&nbsp;</p>
-              <p><strong>方向三：智能制造与系统优化（3D电子打印控制系统、嵌入式数据采集、数字化车间MES系统）                </strong></p>
+<!--               <p><strong>方向三：智能制造与系统优化（3D电子打印控制系统、嵌入式数据采集、数字化车间MES系统）                </strong></p>
               <p><strong>基本介绍</strong>：将智能优化技术、数字化车间智能控制系统、FPGA硬件编程技术、嵌入式控制模块应用至工业工程系统中， 形成成套解决方案，包括3D电子打印控制系统，车间数据采集平台，智能工厂MES系统等。 </p>
               <p><strong>在研项目</strong>：（1）喷墨制备超细栅电极控制及优化关键技术研发，国家863重点项目子课题（中科院项目），主持；
                 （2）面向3D打印电子器件的纳米金属微滴形貌检测与智能优化，中科院重点实验室开放基金（中科院项目），主持。</p>
-              <p> <strong>招生人数</strong>：每年1人 </p>
+              <p> <strong>招生人数</strong>：每年1人 </p> -->
+		<p><strong>方向三：深度机器学习与自然语言处理（文本归类、语义提取、知识表示，知识图谱）               </strong></p>
+              <p><strong>研究成果</strong>：基于深度神经网络、计算智能等机器学习方法，结合知识图谱，研究图像处理和自然语言处理的算法与模型（目标识别、多模态实体抽取、多模态文本分类等），成果发表/录用于 ACM MM 2023 (CCF A类)， IEEE Transactions on Emerging Topics in Computational Intelligence （2023）、IEEE Transactions on Artificial Intelligence (2021)。</p>
+              <p><strong>研究小组</strong>：6人（1名教师+1博士生+5硕士生）</p>
+		   
             </div>
      </div>
    </div>
