--- a/team.html
+++ b/team.html
@@ -266,6 +266,10 @@
 
           <li class="list-group-item"><strong>喻果</strong>，研究员，华东理工大学/英国萨里大学博士</li>
 
+	 <li class="list-group-item"><strong>谢国洋</strong>，算法经理，宁德时代智能制造部</li>
+
+	 <li class="list-group-item"><strong>陆智超</strong>，助理教授，香港城市大学</li>
+
             </ul>
 
 
