--- a/research_index.html
+++ b/research_index.html
@@ -131,15 +131,15 @@
                     <p style="padding:3px 0;line-height: 30px"><strong>以下是论文的具体发表情况:</strong></p>
                         <ul>
                             <li>
-                                <a href="papers/1.html">Lianbo Ma, Haidong Kang, Guo Yu, Qing Li, Qiang He, Single-Domain Generalized Predictor for Neural Architecture Search System, IEEE Transactions on Computers, 2023, major revision. (CCF A类).</a>
+                                <a href="papers/1.html">Lianbo Ma, Haidong Kang, Guo Yu, Qing Li, Qiang He, Single-Domain Generalized Predictor for Neural Architecture Search System, IEEE Transactions on Computers, 2023. (CCF A类，计算机体系结构顶刊).</a>
 
                             </li>
                             <li>
-                                <a href="/papers/2.html">Lianbo Ma, Yuee Zhou, Jianlun Ma, Guo Yu, Qing Li, One-Step Forward and Backtrack: Overcoming Zig-Zagging in Loss-Aware Quantization Training, AAAI-24, 2023 (CCF A类).</a>
+                                <a href="/papers/2.html">Lianbo Ma, Yuee Zhou, Jianlun Ma, Guo Yu, Qing Li, One-Step Forward and Backtrack: Overcoming Zig-Zagging in Loss-Aware Quantization Training, AAAI-24, 2023 (CCF A类，人工智能顶会).</a>
 
                             </li>
                             <li>
-                                <a href="/papers/3.html">Zhengxin Zhang, Yucheng Huang, Guanglin Duan, Qing Li, Dan Zhao, Yong Jiang, Lianbo Ma, Xi Xiao, and Hengyang Xu, Metis: Understanding and Enhancing Regular Expressions in Network, NeurIPS 2023. (CCF A类).</a>
+                                <a href="/papers/3.html">Zhengxin Zhang, Yucheng Huang, Guanglin Duan, Qing Li, Dan Zhao, Yong Jiang, Lianbo Ma, Xi Xiao, and Hengyang Xu, Metis: Understanding and Enhancing Regular Expressions in Network, NeurIPS 2023. (CCF A类，人工智能顶会).</a>
 
                             </li>
                             <li>
@@ -147,27 +147,27 @@
 
                             </li>
                             <li>
-                                <a href="/papers/5.html">Lianbo Ma, Yang Liu, Guo Yu Xinzhe Wang, Hongwei Mo, Gaige Wang, Yaochu Jin, Ying Tan, A Variable-Length Mixed-Variable Pareto Optimization Approach to Evolutionary Cloud Service Allocation, IEEE Transactions on System, Man, and Cybernetics: Systems, 2023,doi: 10.1109/TSMC.2023.3295371 （中科院1区）.</a>
+                                <a href="/papers/5.html">Lianbo Ma, Yang Liu, Guo Yu Xinzhe Wang, Hongwei Mo, Gaige Wang, Yaochu Jin, Ying Tan, A Variable-Length Mixed-Variable Pareto Optimization Approach to Evolutionary Cloud Service Allocation, IEEE Transactions on System, Man, and Cybernetics: Systems, 2023,doi: 10.1109/TSMC.2023.3295371 （中科院1区，国际控制论顶刊）.</a>
 
                             </li>
                             <li>
-                                <a href="/papers/6.html">Fulin Wang, Qing Li, Wanxin Shi, Gareth Tyson, Yong Jiang, Lianbo Ma, Peng Zhang, Yulong Lan, Zhicheng Li ,Reparo: QoE-Aware Live Video Streaming in Low Rate Networks by Intelligent Frame Recovery,ACM MM,2023 (CCF A类).</a>
+                                <a href="/papers/6.html">Fulin Wang, Qing Li, Wanxin Shi, Gareth Tyson, Yong Jiang, Lianbo Ma, Peng Zhang, Yulong Lan, Zhicheng Li ,Reparo: QoE-Aware Live Video Streaming in Low Rate Networks by Intelligent Frame Recovery,ACM MM,2023 (CCF A类，多媒体与人工智能顶会).</a>
 
                             </li>
                             <li>
-                                <a href="/papers/7.html">Guorui Xie, Qing Li, Zhenning Shi, Hanbin Fang, Shengpeng Ji, Yong Jiang, Zhenhui Yuan, Lianbo Ma, and Mingwei Xu, Generating Neural Networks for Diverse Networking Classification Tasks via Hardware-Aware Neural Architecture Search, IEEE Transactions on Computers, 2023 (CCF A类).</a>
+                                <a href="/papers/7.html">Guorui Xie, Qing Li, Zhenning Shi, Hanbin Fang, Shengpeng Ji, Yong Jiang, Zhenhui Yuan, Lianbo Ma, and Mingwei Xu, Generating Neural Networks for Diverse Networking Classification Tasks via Hardware-Aware Neural Architecture Search, IEEE Transactions on Computers, 2023 (CCF A类，计算机体系结构顶刊).</a>
 
                             </li>
                             <li>
-                                <a href="/papers/8.html">XY. Wang, D. Wu, XW. Wang, R. Zeng, Lianbo Ma, Ruiyun Yu. Truthful Auction-based Resource Allocation Mechanisms with Flexible Task Offloading in Mobile Edge Computing, IEEE Transactions on Mobile Computing, 2023 (CCF A类).</a>
+                                <a href="/papers/8.html">XY. Wang, D. Wu, XW. Wang, R. Zeng, Lianbo Ma, Ruiyun Yu. Truthful Auction-based Resource Allocation Mechanisms with Flexible Task Offloading in Mobile Edge Computing, IEEE Transactions on Mobile Computing, 2023 (CCF A类，计算机网络顶刊).</a>
 
                             </li>
                             <li>
-                                <a href="/papers/9.html">He, Qiang; Wang, Yu; Wang, Xingwei; Xu, Weiqiang; Li, Fuliang; Yang, Kaiqi; Ma, Lianbo, Routing Optimization with Deep Reinforcement Learning in Knowledge Defined Networking, IEEE Transactions on Mobile Computing, 10.1109/TMC.2023.3235446, 2023 (CCF A类).</a>
+                                <a href="/papers/9.html">He, Qiang; Wang, Yu; Wang, Xingwei; Xu, Weiqiang; Li, Fuliang; Yang, Kaiqi; Ma, Lianbo, Routing Optimization with Deep Reinforcement Learning in Knowledge Defined Networking, IEEE Transactions on Mobile Computing, 10.1109/TMC.2023.3235446, 2023 (CCF A类，计算机网络顶刊).</a>
 
                             </li>
                             <li>
-                                <a href="/papers/10.html">Nan Li, Lianbo Ma*, Guo Yu, Bing Xue, Mengjie Zhang, Yaochu Jin,Survey on Evolutionary Deep Learning: Principles, Algorithms, Applications and Open Issues，ACM Computing Surveys，2023 （中科院1区， IF:14.32）.</a>
+                                <a href="/papers/10.html">Nan Li, Lianbo Ma*, Guo Yu, Bing Xue, Mengjie Zhang, Yaochu Jin,Survey on Evolutionary Deep Learning: Principles, Algorithms, Applications and Open Issues，ACM Computing Surveys，2023 （中科院1区， 计算机类综述顶刊，IF:14.32）.</a>
 
                             </li>
                         </ul>
