--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="col-md-2" style="margin:15px 0px 0px 20px"> <br/><img src="images/Profile1.jpg" alt="Image About Me" width="100%" height="100%" class="img-responsive img-rounded center-block"/> </div>
   <div class="col-md-9">
   <div>
-    <h2><strong>&nbsp;&nbsp;&nbsp;马连博，教授，辽宁省百千万人才，东北大学引进人才</strong></h2>   </div>  <br/>
+    <h2><strong>&nbsp;&nbsp;&nbsp;马连博，教授，博导，美国斯坦福大学全球前2%顶尖科学家，辽宁省百千万人才工程</strong></h2>   </div>  <br/>
   <div class="col-md-7" style="float: left;width: 49%">
   <ul >
                                         <li class="list-group-item"><strong>出生年月：1981.10</strong>                                                   </li><br/>
