--- a/index.html
+++ b/index.html
@@ -212,19 +212,20 @@
       <div style="float:left;"> 
        <ul>
          <strong class="list-group-item">作为负责人主持：</strong>
-           <li class="list-group-item">国家自然科学基金面上项目</li>
+           <li class="list-group-item">辽宁省揭榜挂帅“工业软件”重大专项课题</li>
+	   <li class="list-group-item">国家自然科学基金面上项目</li>
            <li class="list-group-item">国家自然科学基金青年项目</li>
            <li class="list-group-item">中央基本科研业务费--国家优青培育项目</li>
            <li class="list-group-item">国家863重点项目课题</li>
            <li class="list-group-item">辽宁省自然基金及科技攻关项目</li>
            <li class="list-group-item">华为创新计划专项课题</li>
-           <li class="list-group-item">中科院重点实验室开放基金</li>
-           <li class="list-group-item">东北大学双一流建设子项目</li>
-           <li class="list-group-item">东北大学软件学院优秀骨干教师项目等课题</li>
-           <li class="list-group-item">曾参与完成国家863重点项目2项</li>
-           <li class="list-group-item">国家科技支撑计划1项</li>
-           <li class="list-group-item">国家自然科学基金2项及省市科技计划项目2项</li>
-           <li class="list-group-item">国家发改委智能制造专项</li>
+       <!--     <li class="list-group-item">中科院重点实验室开放基金</li>
+         <!--   <li class="list-group-item">东北大学双一流建设子项目</li>
+           <!-- <li class="list-group-item">东北大学软件学院优秀骨干教师项目等课题</li>
+           <li class="list-group-item">曾参与完成：国家863重点项目、国家科技支撑计划</li>
+           <li class="list-group-item">国家863重点项目2项、国家科技支撑计划1项</li>
+         <!--   <li class="list-group-item">国家自然科学基金2项及省市科技计划项目2项</li>
+         <!-- <li class="list-group-item">国家发改委智能制造专项</li>
 
            <!--        <li>国家自然科学基金项目2项</li>-->
 <!--         <li>国家863重点项目课题1项</li>-->
