--- a/index.html
+++ b/index.html
@@ -211,14 +211,32 @@
         <p><strong>基本概况:</strong></p>
       <div style="float:left;"> 
        <ul>
-         <strong class="list-group-item">作为负责人主持：</strong>
-           <li class="list-group-item">辽宁省揭榜挂帅“工业软件”重大专项课题</li>
-	   <li class="list-group-item">国家自然科学基金面上项目</li>
-           <li class="list-group-item">国家自然科学基金青年项目</li>
-           <li class="list-group-item">中央基本科研业务费--国家优青培育项目</li>
-           <li class="list-group-item">国家863重点项目课题</li>
-           <li class="list-group-item">辽宁省自然基金及科技攻关项目</li>
-           <li class="list-group-item">华为创新计划专项课题</li>
+
+           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">       <h4>获得奖励</h4>           </li>
+               <li> <h5>天津市自然科学奖二等奖，2022</h5>               </li>
+               <li> <h5>中国自动化学会自然科学奖二等奖，2022</h5>                      </li>
+               <li> <h5>中国仿真学会自然科学奖二等奖，2022</h5>            </li>
+	       <li> <h5>IEEE 计算机学会年度优秀论文奖/最佳论文奖亚军，2023</h5>            </li>
+	       <li> <h5>中国科学院院长奖，2015</h5>            </li>
+	        <li> <h5>国际会议ICSI 2021最佳学生论文奖 （大会唯一1篇），2021年</h5>            </li>
+	        <li> <h5>国际会议DMBD Best Special Session Paper最佳研讨会论文奖，2022</h5>            </li>
+
+                <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">       <h4>科研项目</h4>           </li>
+                <li> <h5>煤科总院科技专项课题，2024-2026</h5>            </li>
+	       <li> <h5>辽宁省揭榜挂帅“工业软件”重大专项课题，2024-2026</h5>               </li>
+               <li> <h5>国家自然科学基金面上项目，2018-2022</h5>                      </li>
+               <li> <h5>国家自然科学基金青年项目，2016-2019</h5>            </li>
+               <li> <h5>国家863重点项目课题，2014-2017</h5>            </li>
+               <li> <h5>华为创新计划专项课题，2019-2020</h5>            </li>
+	       
+<!--         <strong class="list-group-item">作为负责人主持：</strong>
+    <!--       <li class="list-group-item">辽宁省揭榜挂帅“工业软件”重大专项课题</li>
+	<!--   <li class="list-group-item">国家自然科学基金面上项目</li>
+          <!-- <li class="list-group-item">国家自然科学基金青年项目</li>
+          <!-- <li class="list-group-item">中央基本科研业务费--国家优青培育项目</li>
+      <!--     <li class="list-group-item">国家863重点项目课题</li>
+      <!--     <li class="list-group-item">辽宁省自然基金及科技攻关项目</li>
+       <!--    <li class="list-group-item">华为创新计划专项课题</li>
        <!--     <li class="list-group-item">中科院重点实验室开放基金</li>
          <!--   <li class="list-group-item">东北大学双一流建设子项目</li>
            <!-- <li class="list-group-item">东北大学软件学院优秀骨干教师项目等课题</li>
