--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div style="float:left;"> 
        <ul>
 
-           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">       <h4>获得奖励</h4>           </li>
+           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">       <h4>科研奖励</h4>           </li>
                <li> <h5>天津市自然科学奖二等奖，2022</h5>               </li>
                <li> <h5>中国自动化学会自然科学奖二等奖，2022</h5>                      </li>
                <li> <h5>中国仿真学会自然科学奖二等奖，2022</h5>            </li>
