--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                <li> <h5>中国仿真学会自然科学奖二等奖，2022</h5>            </li>
 	       <li> <h5>IEEE 计算机学会年度优秀论文奖/最佳论文奖亚军，2023</h5>            </li>
 	       <li> <h5>中国科学院院长奖，2015</h5>            </li>
-	        <li> <h5>国际会议ICSI 2021最佳学生论文奖 （大会唯一1篇），2021年</h5>            </li>
-	        <li> <h5>国际会议DMBD Best Special Session Paper最佳研讨会论文奖，2022</h5>            </li>
+	        <li> <h5>国际会议ICSI 2021最佳学生论文奖 ，2021年</h5>            </li>
+	        <li> <h5>国际会议DMBD最佳研讨会论文奖，2022</h5>            </li>
 
                 <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">       <h4>科研项目</h4>           </li>
                 <li> <h5>煤科总院科技专项课题，2024-2026</h5>            </li>
