--- a/index.html
+++ b/index.html
@@ -264,15 +264,17 @@
       <div> 
        <ul>
            <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">       <h4>计算智能与机器学习优化</h4>           </li>
-               <li> <h5>大规模多目标优化</h5>               </li>
                <li> <h5>神经架构搜索</h5>                      </li>
-               <li> <h5>机器学习模型压缩与加速</h5>            </li>
-           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">        <h4>基于计算智能的云计算与社交网络大数据分析</h4>                    </li>
-               <li> <h5>云资源管理</h5>               </li>
-               <li> <h5>边缘计算任务调度</h5>                      </li>
-               <li> <h5>智能网络</h5>            </li>
+               <li> <h5>神经网络压缩</h5>            </li>
+	       <li> <h5>联邦学习优化</h5>               </li>
+                <li> <h5>数据驱动多目标优化</h5>               </li>
+           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">        <h4>边缘计算与网络分析</h4>                    </li>
+               <li> <h5>云边协同资源管理</h5>               </li>
+               <li> <h5>边缘计算任务卸载</h5>                      </li>
+               <li> <h5>边缘网络视频流处理</h5>            </li>
+	        <li> <h5>社交网络数据分析</h5>            </li>
 <!--           <li class="list-group-item">         <h4>多模态学习与自然语言处理</h4>         </li>-->
-           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">        <h4>多模态学习与自然语言处理</h4>         </li>
+           <li class="list-group-item" style="padding-bottom: 1px;padding-top: 5px">        <h4>知识表示与多模态学习</h4>         </li>
            <li> <h5>知识挖掘</h5>               </li>
                <li> <h5>知识图谱</h5>                      </li>
                <li> <h5>多模态计算</h5>            </li>
@@ -321,9 +323,9 @@
 
      　　　　　杨圣祥，教授，博导，长江学者，英国 De Montfort University<br/><br/>
 
-	     喻果，研究员，南京工业大学/英国萨里大学博士<br/><br/>
+ &emsp;&emsp;&emsp;&emsp;&emsp;	   喻果，研究员，南京工业大学/英国萨里大学博士<br/><br/>
      　　　　
-	     谢国洋，算法经理，宁德时代智能制造部<br/><br/>
+	     &emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
 
 
          &emsp;&emsp;&emsp;&emsp;&emsp;陆智超，助理教授，香港城市大学<br/><br/>
