--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <!--              <div>&nbsp;</div>-->
 <!--              <div><strong>培养方式：</strong>合作导师+博士+硕士+优秀本科生</div>-->
 <!--              <div>&nbsp;</div>-->
-<!--              <div><strong>主研方向：</strong>（1）进化计算与多目标算法；（2）神经架构搜索与深度模型压缩；（3）云计算与大数据分析；（4）知识图谱与文本挖掘</div>-->
+<!--              <div><strong>主研方向：</strong>（1）神经架构搜索与智能计算；（2）边缘计算与网络分析；（3）云计算与大数据分析；（4）知识表示与多模态学习</div>-->
 <!--              <div>&nbsp;</div>-->
 <!--              <div><strong>合作导师</strong>：与多名海内外专家（<strong>IEEE Fellow2人，IEEE Senior Member 1人，杰青1人</strong>）保持长期合作关系。</div>-->
 <!--             -->
@@ -325,7 +325,7 @@
 
  &emsp;&emsp;&emsp;&emsp;&emsp;	   喻果，研究员，南京工业大学/英国萨里大学博士<br/><br/>
      　　　　
-	     &emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
+	     &emsp;&emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
 
 
          &emsp;&emsp;&emsp;&emsp;&emsp;陆智超，助理教授，香港城市大学<br/><br/>
