--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
      培养方式：合作导师+博士+硕士+优秀本科生<br/><br/>
 
-     主研方向：（1）计算智能与机器学习优化；（2）云计算与社交网络大数据分析；（3）知识图谱与自然语言处理；（4）多模态数据处理技术<br/><br/>
+     主研方向：（1）神经架构搜索与智能计算；（2）边缘计算与网络分析；（3）云计算与大数据分析；（4）知识表示与多模态学习<br/><br/>
 
      合作导师：<br/>&emsp;&emsp;&emsp;&emsp;&emsp;金耀初，教授，IEEE Fellow，英国萨里大学 （访学合作导师）<br/><br/>
 
@@ -324,8 +324,7 @@
      　　　　　杨圣祥，教授，博导，长江学者，英国 De Montfort University<br/><br/>
 
  &emsp;&emsp;&emsp;&emsp;&emsp;	   喻果，研究员，南京工业大学/英国萨里大学博士<br/><br/>
-     　　　　
-	     &emsp;&emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
+	     &emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
 
 
          &emsp;&emsp;&emsp;&emsp;&emsp;陆智超，助理教授，香港城市大学<br/><br/>
