--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
      　　　　　杨圣祥，教授，博导，长江学者，英国 De Montfort University<br/><br/>
 
  &emsp;&emsp;&emsp;&emsp;&emsp;	   喻果，研究员，南京工业大学/英国萨里大学博士<br/><br/>
-	     &emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
+	     &emsp；&emsp;&emsp;&emsp;&emsp; 谢国洋，算法经理，宁德时代智能制造部<br/><br/>
 
 
          &emsp;&emsp;&emsp;&emsp;&emsp;陆智超，助理教授，香港城市大学<br/><br/>
