--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@
            <li> <h5>知识挖掘</h5>               </li>
                <li> <h5>知识图谱</h5>                      </li>
                <li> <h5>多模态计算</h5>            </li>
+               <li> <h5>大模型在医疗诊断、工业制造的应用</h5>            </li>
+
 <!--           <li class="list-group-item">         <h4>知识图谱与自然语言处理分析</h4>-->
 <!--</li>-->
 <!--            <li class="list-group-item">         <h4>工业资源调度仿真优化</h4>-->
