--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="col-md-2" style="margin:15px 0px 0px 20px"> <br/><img src="images/Profile1.jpg" alt="Image About Me" width="100%" height="100%" class="img-responsive img-rounded center-block"/> </div>
   <div class="col-md-9">
   <div>
-    <h2><strong>&nbsp;&nbsp;&nbsp;马连博，教授，博导，美国斯坦福大学全球前2%顶尖科学家，辽宁省百千万人才工程</strong></h2>   </div>  <br/>
+    <h2><strong>&nbsp;&nbsp;&nbsp;马连博，教授，博导，美国斯坦福大学全球前2%顶尖科学&nbsp;&nbsp;&nbsp;家，辽宁省百千万人才工程</strong></h2>   </div>  <br/>
   <div class="col-md-7" style="float: left;width: 49%">
   <ul >
                                         <li class="list-group-item"><strong>出生年月：1981.10</strong>                                                   </li><br/>
@@ -337,6 +337,26 @@
          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="images/团队二维码.jpg">
      </div>
   </div>
+  </div> <!-- row -->
+
+
+ <div class="row">
+   <div class="col-md-12">
+       <div><h2 class="head_3"></h2></div>
+   <h2 class="head_2">招生信息</h2>
+   </div>
+   <div class="content">
+  <div class="panel panel-info">
+             <ul class="list-group">
+                <li class="list-group-item">
+                  <p><STRONG>招生说明： </STRONG></p>
+                  <p>1：秉着“宁缺毋滥”的原则，欢迎积极进取、富有理想的优秀学生加入我们；</p>
+                  <p>2：建议事先了解一下人工智能、优化算法、智能网络与大数据分析等研究方向，确认对此感兴趣。欢迎有一定数学基础、软件设计经验的同学加入我们。 </p>
+                </li>
+                <li class="list-group-item">培养方式：1）根据兴趣，研究分组：基础理论+系统应用；2）与海外学者合作，联合指导；3）表现优秀者，可推荐海外深造</li>
+            </ul>
+        </div>
+   	</div>
   </div> <!-- row -->
     
  <div class="row">
