--- a/index.html
+++ b/index.html
@@ -343,17 +343,39 @@
  <div class="row">
    <div class="col-md-12">
        <div><h2 class="head_3"></h2></div>
-   <h2 class="head_2">招生信息</h2>
+   <h2 class="head_2">指导学生</h2>
    </div>
    <div class="content">
   <div class="panel panel-info">
              <ul class="list-group">
                 <li class="list-group-item">
-                  <p><STRONG>招生说明： </STRONG></p>
-                  <p>1：秉着“宁缺毋滥”的原则，欢迎积极进取、富有理想的优秀学生加入我们；</p>
-                  <p>2：建议事先了解一下人工智能、优化算法、智能网络与大数据分析等研究方向，确认对此感兴趣。欢迎有一定数学基础、软件设计经验的同学加入我们。 </p>
+                  <p>2023睿抗机器人开发者大赛（RAICOM）全国总决赛编程技能竞赛项目一等奖，国家级，2023年</p>
+
+<p>国际数学建模M奖(一等奖)，国际，2023年；</p>
+
+<p>蓝桥杯全国软件和信息技术专业大赛全国总决赛二等奖、三等奖，2023年</p>
+
+<p>蓝桥杯全国软件和信息技术专业大赛辽宁赛区一等奖、二等奖、三等奖，2023年</p>
+
+<p>第三届辽宁省大学生程序设计竞赛 一等奖，省级，2022年；</p>
+
+<p>全国大学生数学建模大赛辽宁省赛区（本科组）二等奖、三等奖，省级，2022年；</p>
+
+<p>辽宁省优秀硕士学位论文奖，省级，2021年；</p>
+
+<p>国际数学建模二等奖，国际，2022年；</p>
+
+<p>国际数学建模二等奖，国际，2021年；</p>
+
+<p>ICSI国际会议最佳学生论文奖，国际，2021年；</p>
+
+<p>研究生国家奖学金4人/次，2019-2021年；</p>
+
+<p>东北大学优秀硕士学位论文奖，校级，2020年；</p>
+<!--                   <p>1：秉着“宁缺毋滥”的原则，欢迎积极进取、富有理想的优秀学生加入我们；</p>
+                  <p>2：建议事先了解一下人工智能、优化算法、智能网络与大数据分析等研究方向，确认对此感兴趣。欢迎有一定数学基础、软件设计经验的同学加入我们。 </p> -->
                 </li>
-                <li class="list-group-item">培养方式：1）根据兴趣，研究分组：基础理论+系统应用；2）与海外学者合作，联合指导；3）表现优秀者，可推荐海外深造</li>
+<!--                 <li class="list-group-item">培养方式：1）根据兴趣，研究分组：基础理论+系统应用；2）与海外学者合作，联合指导；3）表现优秀者，可推荐海外深造</li> -->
             </ul>
         </div>
    	</div>
