--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
  <div class="row">
    <div class="col-md-12">
        <div><h2 class="head_3"></h2></div>
-   <h2 class="head_2">指导学生</h2>
+   <h2 class="head_2">指导学生</h2><br/><br/><br/>
    </div>
    <div class="content">
   <div class="panel panel-info">
