--- a/index.html
+++ b/index.html
@@ -349,29 +349,29 @@
   <div class="panel panel-info">
              <ul class="list-group">
                 <li class="list-group-item">
-                  <p>2023睿抗机器人开发者大赛（RAICOM）全国总决赛编程技能竞赛项目一等奖，国家级，2023年</p>
+                  &nbsp;&nbsp;&nbsp;<p>2023睿抗机器人开发者大赛（RAICOM）全国总决赛编程技能竞赛项目一等奖，国家级，2023年</p>
 
-<p>国际数学建模M奖(一等奖)，国际，2023年；</p>
+&nbsp;&nbsp;&nbsp;<p>国际数学建模M奖(一等奖)，国际，2023年；</p>
 
-<p>蓝桥杯全国软件和信息技术专业大赛全国总决赛二等奖、三等奖，2023年</p>
+&nbsp;&nbsp;&nbsp;<p>蓝桥杯全国软件和信息技术专业大赛全国总决赛二等奖、三等奖，2023年</p>
 
-<p>蓝桥杯全国软件和信息技术专业大赛辽宁赛区一等奖、二等奖、三等奖，2023年</p>
+&nbsp;&nbsp;&nbsp;<p>蓝桥杯全国软件和信息技术专业大赛辽宁赛区一等奖、二等奖、三等奖，2023年</p>
 
-<p>第三届辽宁省大学生程序设计竞赛 一等奖，省级，2022年；</p>
+&nbsp;&nbsp;&nbsp;<p>第三届辽宁省大学生程序设计竞赛 一等奖，省级，2022年；</p>
 
-<p>全国大学生数学建模大赛辽宁省赛区（本科组）二等奖、三等奖，省级，2022年；</p>
+&nbsp;&nbsp;&nbsp;<p>全国大学生数学建模大赛辽宁省赛区（本科组）二等奖、三等奖，省级，2022年；</p>
 
-<p>辽宁省优秀硕士学位论文奖，省级，2021年；</p>
+&nbsp;&nbsp;&nbsp;<p>辽宁省优秀硕士学位论文奖，省级，2021年；</p>
 
-<p>国际数学建模二等奖，国际，2022年；</p>
+&nbsp;&nbsp;&nbsp;<p>国际数学建模二等奖，国际，2022年；</p>
 
-<p>国际数学建模二等奖，国际，2021年；</p>
+&nbsp;&nbsp;&nbsp;<p>国际数学建模二等奖，国际，2021年；</p>
 
-<p>ICSI国际会议最佳学生论文奖，国际，2021年；</p>
+&nbsp;&nbsp;&nbsp;<p>ICSI国际会议最佳学生论文奖，国际，2021年；</p>
 
-<p>研究生国家奖学金4人/次，2019-2021年；</p>
+&nbsp;&nbsp;&nbsp;<p>研究生国家奖学金4人/次，2019-2021年；</p>
 
-<p>东北大学优秀硕士学位论文奖，校级，2020年；</p>
+&nbsp;&nbsp;&nbsp;<p>东北大学优秀硕士学位论文奖，校级，2020年；</p>
 <!--                   <p>1：秉着“宁缺毋滥”的原则，欢迎积极进取、富有理想的优秀学生加入我们；</p>
                   <p>2：建议事先了解一下人工智能、优化算法、智能网络与大数据分析等研究方向，确认对此感兴趣。欢迎有一定数学基础、软件设计经验的同学加入我们。 </p> -->
                 </li>
