--- a/index.html
+++ b/index.html
@@ -343,12 +343,13 @@
  <div class="row">
    <div class="col-md-12">
        <div><h2 class="head_3"></h2></div>
-   <h2 class="head_2">指导学生</h2><br/><br/><br/>
+   <h2 class="head_2">指导学生</h2><br/>
    </div>
    <div class="content">
   <div class="panel panel-info">
              <ul class="list-group">
                 <li class="list-group-item">
+			                  <p><STRONG>学生获奖： </STRONG></p>
                   &nbsp;&nbsp;&nbsp;<p>2023睿抗机器人开发者大赛（RAICOM）全国总决赛编程技能竞赛项目一等奖，国家级，2023年</p>
 
 &nbsp;&nbsp;&nbsp;<p>国际数学建模M奖(一等奖)，国际，2023年；</p>
