--- a/research_index.html
+++ b/research_index.html
@@ -130,6 +130,9 @@
                     <p></p>
                     <p style="padding:3px 0;line-height: 30px"><strong>以下是论文的具体发表情况:</strong></p>
                         <ul>
+    		             <li>
+                            <a href="papers/1.html">2024年</a>
+                             </li>
                             <li>
                                 <a href="papers/1.html">Lianbo Ma, Haidong Kang, Guo Yu, Qing Li, Qiang He, Single-Domain Generalized Predictor for Neural Architecture Search System, IEEE Transactions on Computers, 2023. (CCF A类，计算机体系结构顶刊).</a>
 
@@ -138,6 +141,10 @@
                                 <a href="/papers/2.html">Lianbo Ma, Yuee Zhou, Jianlun Ma, Guo Yu, Qing Li, One-Step Forward and Backtrack: Overcoming Zig-Zagging in Loss-Aware Quantization Training, AAAI-24, 2023 (CCF A类，人工智能顶会).</a>
 
                             </li>
+                            <li>
+                            <a href="papers/1.html">2023年</a>
+                             </li>
+				
                             <li>
                                 <a href="/papers/3.html">Zhengxin Zhang, Yucheng Huang, Guanglin Duan, Qing Li, Dan Zhao, Yong Jiang, Lianbo Ma, Xi Xiao, and Hengyang Xu, Metis: Understanding and Enhancing Regular Expressions in Network, NeurIPS 2023. (CCF A类，人工智能顶会).</a>
 
