--- a/research_index.html
+++ b/research_index.html
@@ -142,7 +142,7 @@
 
                             </li>
                             <li>
-                            <a href="papers/1.html">2023年</a>
+                            <span style="color: rgb(255, 0, 0);">2023年：</span>
                              </li>
 				
                             <li>
