--- a/research_index.html
+++ b/research_index.html
@@ -134,7 +134,7 @@
                             <span style="color: rgb(255, 0, 0);">2024年：</span>
                              </li>
                             <li>
-                                <a href="/papers/3.html">Lianbo Ma, Haidong Kang, Guo Yu, Qing Li, Qiang He, Single-Domain Generalized Predictor for Neural Architecture Search System, IEEE Transactions on Computers, 2024. (CCF A类). (CCF A类，人工智能顶会).</a>
+                                <a href="/papers/3.html">Lianbo Ma, Ye Ma, Yuee Zhou, Guo Yu, Qing Li, Qiang He, and Yan Pei, Defying Multi-model Forgetting in One-shot Neural Architecture Search Using Orthogonal Gradient Learning, IEEE Transactions on Computers, 2024. (CCF A类). (CCF A类，人工智能顶会).</a>
 
                             </li>			
 				<li>
