--- a/research_index.html
+++ b/research_index.html
@@ -154,7 +154,7 @@
 
                             </li>
                             <li>
-                                <a href="/papers/4.html">Lianbo Ma, Nan Li, Guo Yu, Xiaoyu Geng, Shi Cheng, Xingwei Wang, Min Huang, Yaochu Jin, Pareto-wise Ranking Classifier for Multi-objective Evolutionary Neural Architecture Search，IEEE Transactions on Evolutionary Computation, 2023，https://doi.org/10.1109/TEVC.2023.3314766 （进化计算顶刊，中科院1区）.</a>
+                                <a href="/papers/4.html">Lianbo Ma, Nan Li, Guo Yu, Xiaoyu Geng, Shi Cheng, Xingwei Wang, Min Huang, Yaochu Jin, Pareto-wise Ranking Classifier for Multi-objective Evolutionary Neural Architecture Search，IEEE Transactions on Evolutionary Computation, 2023.（进化计算顶刊，中科院1区）.</a>
 
                             </li>
                             <li>
