--- a/ourjob.html
+++ b/ourjob.html
@@ -151,7 +151,8 @@
            </div>
            <div>
                <p><strong>科研获奖:</strong></p>
-               <p>&emsp;&emsp;中国自动化学会自然科学奖二等奖</p>
+               <p>&emsp;&emsp;IEEE计算机学会2022年度优秀论文奖(Best Paper Award Running-up),2022年，IEEE Computers Society</p>
+		<p>&emsp;&emsp;中国自动化学会自然科学奖二等奖,2022年，中国自动化学会</p>
                <p>&emsp;&emsp;天津市自然科学奖二等奖 2022年,天津市政府</p>
                <p>&emsp;&emsp;中国仿真学会自然科学奖二等奖，2022年,中国仿真学会</p>
                <p>&emsp;&emsp;教育部青年长江东北大学有效候选人，2018</p>
